# controllers/authController.js
@@ -29,17 +29,3 @@ export const login = async (req, res) => {
     res.status(500).json({ message: err.message });
   }
 };
-export const registerTeacher = async (req, res) => {
-  try {
-    const { full_name, login, password } = req.body;
-    const existing = await User.findOne({ login });
-    if (existing) return res.status(400).json({ message: "Користувач вже існує" });
-
-    const hashed = await bcrypt.hash(password, 10);
-    const teacher = new User({ full_name, login, password_hash: hashed, role: "teacher" });
-    await teacher.save();
-    res.status(201).json({ message: "Викладач створений", teacher });
-  } catch (err) {
-    res.status(500).json({ message: err.message });
-  }
-};
